--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,8 @@
     "typeinfo": "cpp",
     "variant": "cpp",
     "format": "cpp",
-    "__nullptr": "cpp"
+    "__nullptr": "cpp",
+    "__locale": "cpp",
+    "locale": "cpp"
   }
 }
