--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "files.associations": {
-    "algorithm": "cpp",
-    "iomanip": "cpp",
-    "random": "cpp",
     "array": "cpp",
     "atomic": "cpp",
     "bit": "cpp",
@@ -12,7 +9,6 @@
     "chrono": "cpp",
     "clocale": "cpp",
     "cmath": "cpp",
-    "codecvt": "cpp",
     "compare": "cpp",
     "concepts": "cpp",
     "condition_variable": "cpp",
@@ -32,20 +28,22 @@
     "unordered_set": "cpp",
     "vector": "cpp",
     "exception": "cpp",
+    "algorithm": "cpp",
     "functional": "cpp",
     "iterator": "cpp",
     "memory": "cpp",
     "memory_resource": "cpp",
     "numeric": "cpp",
     "optional": "cpp",
+    "random": "cpp",
     "ratio": "cpp",
     "string_view": "cpp",
     "system_error": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
     "utility": "cpp",
-    "fstream": "cpp",
     "initializer_list": "cpp",
+    "iomanip": "cpp",
     "iosfwd": "cpp",
     "iostream": "cpp",
     "istream": "cpp",
@@ -65,7 +63,8 @@
     "variant": "cpp",
     "format": "cpp",
     "__nullptr": "cpp",
-    "__locale": "cpp",
-    "locale": "cpp"
+    "__node_handle": "cpp",
+    "codecvt": "cpp",
+    "fstream": "cpp"
   }
 }
