--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
     "codecvt": "cpp",
     "fstream": "cpp",
     "__locale": "cpp",
-    "locale": "cpp"
+    "locale": "cpp",
+    "climits": "cpp"
   }
 }
